--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
