--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "remixicons": "^1.0.0"
   },
