--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@vercel/postgres": "^0.8.0",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
-    "remixicons": "^1.0.0"
+    "remixicons": "^1.0.0",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
