--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@vercel/postgres": "^0.8.0",
+    "chart.js": "^4.4.2",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
